# hs-blog-gen

./: .gitignore  Convert.hs  Html.hs  LICENSE  Main.hs  Markup.hs  README.md  example.txt  hello.hs  hs-blog.cabal  stack.yaml
Html/: Internal.hs
app/: Main.hs  OptParse.hs
src/: HsBlog.hs
src/HsBlog/: Convert.hs  Directory.hs  Env.hs  Html.hs  Markup.hs
src/HsBlog/Html/: Internal.hs
