cabal-version:      2.4
name:               hs-blog
version:            0.1.0.0
-- synopsis:
-- description:
-- homepage:
-- bug-reports:
license:            BSD-3-Clause
license-file:       LICENSE
-- author:
-- maintainer:
category:           Web
extra-doc-files:    README.md

common common-settings
    default-language: Haskell2010
    ghc-options:      -Wall

library
    import:           common-settings
    hs-source-dirs:   src
    build-depends:
        base,
        directory
    exposed-modules:
      HsBlog
        HsBlog.Convert
        HsBlog.Html
          HsBlog.Html.Internal
        HsBlog.Markup
    -- other-modules:

executable hs-blog-gen
    import:           common-settings
    hs-source-dirs:   app
    main-is:          Main.hs
    build-depends:
        base,
        hs-blog
    ghc-options:      -O
